<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Circle Battery</string>
    <string name="app_moto">Circle battery for SystemUI</string>
    <string name="status_module_active">Active</string>
    <string name="status_module_inactive">Not active</string>
    <string name="status_module_desc">Enable in LSPosed (API 102), then restart SystemUI.</string>
    <string name="battery_style_circle_title">Circle Battery</string>
    <string name="swap_percentage_title">Percent First</string>
    <string name="swap_percentage_desc">Show percentage before battery icon</string>
    <string name="order_percent_first">Percent First</string>
    <string name="order_percent_first_preview">85%  ◎</string>
    <string name="order_icon_first">Icon First</string>
    <string name="order_icon_first_preview">◎  85%</string>
    <string name="layout_order_title">Display Order</string>
    <string name="layout_order_subtitle">Position of percentage relative to circle</string>
    <string name="order_percent_first_desc">% before circle icon</string>
    <string name="order_icon_first_desc">Standard SystemUI order</string>
    <string name="layout_percent_first_msg">Layout: Percent First</string>
    <string name="layout_icon_first_msg">Layout: Icon First</string>
    <string name="ring_style_title">Ring Geometry</string>
    <string name="ring_style_continuous">Continuous</string>
    <string name="ring_style_dotted">Dotted</string>
    <string name="ring_style_filled">Filled</string>
    <string name="dimension_slider_title">Circle Footprint</string>
    <string name="footprint_label">Status bar footprint</string>
    <string name="footprint_slider_desc">Circle footprint size</string>
    <string name="size_title">Size</string>
    <string name="btn_restart_sysui">Restart SystemUI</string>
    <string name="restart_sysui_success">SystemUI restarted</string>
    <string name="restart_sysui_no_root">Root needed. Reboot instead.</string>
    <string name="device_battery_title">Device Battery</string>
    <string name="device_battery_source">Source</string>
    <string name="device_battery_temp">Temp</string>
    <string name="device_battery_voltage">Voltage</string>
    <string name="device_battery_health">Health</string>
    <string name="device_temp_format">%1$.1f°C</string>
    <string name="device_voltage_format">%1$.2fV</string>
    <string name="device_status_charging">Charging</string>
    <string name="device_status_discharging">Discharging</string>
    <string name="device_status_full">Full</string>
    <string name="device_status_unknown">Unknown</string>
    <string name="device_source_ac">AC</string>
    <string name="device_source_usb">USB</string>
    <string name="device_source_wireless">Wireless</string>
    <string name="device_source_unplugged">Unplugged</string>
    <string name="device_health_good">Good</string>
    <string name="device_health_overheat">Overheat</string>
    <string name="device_health_dead">Dead</string>
    <string name="device_health_over_voltage">Over voltage</string>
    <string name="device_health_cold">Cold</string>
    <string name="device_health_unknown">Unknown</string>
    <string name="size_preset_compact">16 dp</string>
    <string name="size_preset_standard">20 dp</string>
    <string name="size_preset_large">24 dp</string>
    <string name="size_preset_extra">28 dp</string>
    <string name="action_restart_hint">Restart SystemUI to immediately reload hook changes. Root required; otherwise reboot your device.</string>
    <string name="systemui_module_status">LSPosed Module Status</string>
    <string name="init_module_installation">Initializing setup</string>
    <string name="step">Step</string>
    <string name="step_number">Step %1$d/%2$d</string>
    <string name="module_installation_step1">Creating module shell</string>
    <string name="module_installation_step2">Extracting necessary files</string>
    <string name="module_installation_step3">Creating overlay APKs</string>
    <string name="module_installation_step4">Aligning overlay APKs</string>
    <string name="module_installation_step5">Signing overlay APKs</string>
    <string name="module_installation_step6">Cleaning directories</string>
    <string name="onboarding_title_1">Got Bored of Stock UI ?</string>
    <string name="onboarding_subtitle_1">Let\'s customize everything to our likings.</string>
    <string name="onboarding_desc_1">Ditch the stock UI monotony – personalize every tech detail to match your style and preferences.</string>
    <string name="onboarding_title_2">Is My Device Supported ?</string>
    <string name="onboarding_subtitle_2">Iconify supports all Pixel and AOSP ROMs.</string>
    <string name="onboarding_desc_2">Compatible with all Pixel and AOSP-based ROMs, ensuring broad support for Android devices.</string>
    <string name="onboarding_title_3">Shall We Begin Now ?</string>
    <string name="onboarding_subtitle_3">It is time for iconify to do some internal work.</string>
    <string name="onboarding_desc_3">Starting internal tasks, marking the initiation of essential work. Ready to begin?</string>
    <string name="need_storage_perm_title">Need Storage Permission</string>
    <string name="need_storage_perm_desc">Storage permission is required to build the necessary files.</string>
    <string name="compatible_root_not_found_title">Could Not Find Compatible Root Method</string>
    <string name="compatible_root_not_found_desc">Use any popular root solutions to proceed.</string>
    <string name="root_not_found_title">Root Is Not Accessible</string>
    <string name="root_not_found_desc">Looks like your device is not rooted!</string>
    <string name="need_reboot_title">Need Device Reboot</string>
    <string name="need_reboot_desc">Reboot your device to put all files in place.</string>
    <string name="installation_failed_title">Oops Did Not Expect That</string>
    <string name="installation_failed_desc">Logs have been saved in documents folder.</string>
    <string name="logs">Logs</string>
    <string name="search_title">Search</string>
    <string name="searchpreference_search">Search…</string>
    <string name="searchpreference_clear">Clear</string>
    <string name="searchpreference_history_entry">History entry</string>
    <string name="searchpreference_more">More</string>
    <string name="searchpreference_clear_history">Clear history</string>
    <string name="searchpreference_no_result">No result</string>
    <string name="activity_title_home_page">Iconify</string>
    <string name="activity_title_icon_pack">Icon Pack</string>
    <string name="activity_desc_icon_pack">Change system icon pack</string>
    <string name="activity_title_cellular_icons">Cellular Icons</string>
    <string name="activity_desc_cellular_icons">Change system cellular icons</string>
    <string name="activity_title_wifi_icons">WiFi Icons</string>
    <string name="activity_desc_wifi_icons">Change system WiFi icons</string>
    <string name="activity_title_brightness_bar">Brightness Bar</string>
    <string name="activity_desc_brightness_bar">Customize progress slider</string>
    <string name="activity_title_qs_shape">QS Panel Tiles</string>
    <string name="activity_desc_qs_shape">Customize QS panel tiles</string>
    <string name="activity_title_notification">Notification</string>
    <string name="activity_desc_notification">Customize notification style</string>
    <string name="activity_title_progress_bar">Progress Bar</string>
    <string name="activity_desc_progress_bar">Use different progress style</string>
    <string name="activity_title_switch">Switch</string>
    <string name="activity_desc_switch">Customize switch appearance</string>
    <string name="activity_title_toast_frame">Toast Frame</string>
    <string name="activity_desc_toast_frame">Change toast notification style</string>
    <string name="activity_title_icon_shape">Icon Shape</string>
    <string name="activity_desc_icon_shape">Change system icon shapes</string>
    <string name="iconify_updated_title">Iconify Just Got Updated!</string>
    <string name="iconify_updated_desc">Reboot your phone to use the latest added features and options.</string>
    <string name="home_card_title">Design It Your Way</string>
    <string name="home_card_subtitle">Unleash Your Imagination, Make It Yours</string>
    <string name="home_card_hide">Hide</string>
    <string name="activity_title_color_engine">Color Engine</string>
    <string name="activity_desc_color_engine">Have control over colors</string>
    <string name="activity_title_ui_roundness">UI Roundness</string>
    <string name="section_title_portrait">Portrait Mode</string>
    <string name="section_title_landscape">Landscape Mode</string>
    <string name="qqs_panel_top_margin_title">QQS Panel Top Margin</string>
    <string name="qs_panel_top_margin_title">QS Panel Top Margin</string>
    <string name="qs_panel_top_margin_info">Rotate device to see changes. If that doesn\'t work, restart SystemUI.</string>
    <string name="volume_style">Volume Style</string>
    <string name="oneplus_qs_header_title">Oneplus QS Header</string>
    <string name="oneplus_qs_header_vibrate_title">Haptic Feedback</string>
    <string name="oneplus_qs_header_vibrate_desc">Add haptic feedback on tiles</string>
    <string name="oneplus_qs_header_show_artwork_title">Show Artwork</string>
    <string name="oneplus_qs_header_show_artwork_desc">Show album art of the playing media</string>
    <string name="oneplus_qs_header_blur_level">Blur Level</string>
    <string name="oneplus_qs_header_top_margin">Top Margin</string>
    <string name="oneplus_qs_header_expansion_y">Expansion Amount</string>
    <string name="oneplus_qs_header_gap">Expanded Gap</string>
    <string name="volume_percentage_title">Volume Percentage</string>
    <string name="volume_percentage_desc">Show percentage above volume slider</string>
    <string name="safety_warning_title">Safety Warning</string>
    <string name="safety_warning_desc">Show warning on high volume</string>
    <string name="dsb_title">Dual Row Statusbar</string>
    <string name="dsb_portrait_only_title">Portrait Only</string>
    <string name="dsb_single_line_start_side_title">Single-Line Start Side</string>
    <string name="dsb_single_line_start_side_desc">Show one row on start side of statusbar</string>
    <string name="dsb_single_line_end_side_title">Single-Line End Side</string>
    <string name="dsb_single_line_end_side_desc">Show one row on end side of statusbar</string>
    <string name="dsb_swap_start_side_title">Swap Start Side</string>
    <string name="dsb_swap_start_side_desc">Swap the position of clock and notification icons</string>
    <string name="dsb_swap_end_side_title">Swap End Side</string>
    <string name="dsb_swap_end_side_desc">Swap the position of battery and status icons</string>
    <string name="dsb_statusbar_height_title">Statusbar Height</string>
    <string name="dsb_start_padding_title">Start Padding</string>
    <string name="dsb_end_padding_title">End Padding</string>
    <string name="dsb_top_padding_title">Top Padding</string>
    <string name="dsb_start_top_margin_title">Start Top Margin</string>
    <string name="dsb_start_bottom_margin_title">Start Bottom Margin</string>
    <string name="dsb_end_top_margin_title">End Top Margin</string>
    <string name="dsb_end_bottom_margin_title">End Bottom Margin</string>
    <string name="custom_qs_margin_title">Custom QS Margin</string>
    <string name="custom_tiles_footer_info">To ensure custom tiles work properly, first use the default internet and bluetooth tiles once before using the custom ones.</string>
    <string name="media_art_title">Show Media Album Art</string>
    <string name="media_art_blur_level_title">Blur Level</string>
    <string name="albumart_filter_title">Media Album Art Filter</string>
</resources>