<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:search="http://schemas.android.com/apk/com.drdisagree.iconify.ui.preferences.preferencesearch">

    <com.drdisagree.iconify.ui.preferences.MasterSwitchPreference
        android:key="xposed_opqsheader"
        android:title="@string/oneplus_qs_header_title" />

    <com.drdisagree.iconify.ui.preferences.SwitchPreference
        android:dependency="xposed_opqsheader"
        android:key="xposed_opqsheadervibrate"
        android:summary="@string/oneplus_qs_header_vibrate_desc"
        android:title="@string/oneplus_qs_header_vibrate_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.iconify.ui.preferences.SwitchPreference
        android:defaultValue="true"
        android:dependency="xposed_opqsheader"
        android:key="xposed_opqsheadershowartwork"
        android:summary="@string/oneplus_qs_header_show_artwork_desc"
        android:title="@string/oneplus_qs_header_show_artwork_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.iconify.ui.preferences.SliderPreference
        android:dependency="xposed_opqsheader"
        android:key="xposed_opqsheaderblurlevel"
        android:title="@string/oneplus_qs_header_blur_level"
        app:defaultValue="40"
        app:iconSpaceReserved="false"
        app:maxVal="100"
        app:minVal="0"
        app:showResetButton="true"
        app:tickInterval="1"
        app:valueFormat="%" />

    <com.drdisagree.iconify.ui.preferences.SliderPreference
        android:dependency="xposed_opqsheader"
        android:key="xposed_opqsheadertopmargin"
        android:title="@string/oneplus_qs_header_top_margin"
        app:defaultValue="0"
        app:iconSpaceReserved="false"
        app:maxVal="300"
        app:minVal="0"
        app:showResetButton="true"
        app:tickInterval="1"
        app:valueFormat="dp" />

    <com.drdisagree.iconify.ui.preferences.SliderPreference
        android:dependency="xposed_opqsheader"
        android:key="xposed_opqsheaderexpansiony"
        android:title="@string/oneplus_qs_header_expansion_y"
        app:defaultValue="0"
        app:iconSpaceReserved="false"
        app:maxVal="100"
        app:minVal="-100"
        app:showResetButton="true"
        app:tickInterval="1"
        app:valueFormat="dp" />

    <com.drdisagree.iconify.ui.preferences.SliderPreference
        android:dependency="xposed_opqsheader"
        android:key="xposed_opqsheadergapexpanded"
        android:title="@string/oneplus_qs_header_gap"
        app:defaultValue="0"
        app:iconSpaceReserved="false"
        app:maxVal="40"
        app:minVal="-40"
        app:showResetButton="true"
        app:tickInterval="1"
        app:valueFormat="dp" />

    <com.drdisagree.iconify.ui.preferences.FooterPreference
        android:key="op_qs_footer_info"
        android:title="@string/custom_tiles_footer_info"
        search:ignore="true" />

</PreferenceScreen>