<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.drdisagree.iconify.ui.preferences.ListPreference
        android:defaultValue="0"
        android:entries="@array/volume_panel_style_entries"
        android:entryValues="@array/volume_panel_style_values"
        android:key="xposed_volumepanelstyle"
        android:title="@string/volume_style"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <com.drdisagree.iconify.ui.preferences.SwitchPreference
        android:key="xposed_volumepanelpercentage"
        android:summary="@string/volume_percentage_desc"
        android:title="@string/volume_percentage_title"
        app:iconSpaceReserved="false" />

    <com.drdisagree.iconify.ui.preferences.SwitchPreference
        android:key="xposed_volumepanelsafetywarning"
        android:summary="@string/safety_warning_desc"
        android:title="@string/safety_warning_title"
        app:iconSpaceReserved="false" />

</PreferenceScreen>