<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:search="http://schemas.android.com/apk/com.drdisagree.iconify.ui.preferences.preferencesearch">

    <com.drdisagree.iconify.ui.preferences.MasterSwitchPreference
        android:key="xposed_customqsmargin"
        android:title="@string/custom_qs_margin_title" />

    <com.drdisagree.iconify.ui.preferences.PreferenceCategory
        android:key="xposedQuickSettingsQsMarginPortrait"
        android:title="@string/section_title_portrait"
        app:iconSpaceReserved="false"
        search:ignore="true">

        <com.drdisagree.iconify.ui.preferences.SliderPreference
            android:dependency="xposed_customqsmargin"
            android:key="xposed_qqspanelTopMargin"
            android:title="@string/qqs_panel_top_margin_title"
            app:defaultValue="100"
            app:iconSpaceReserved="false"
            app:maxVal="300"
            app:minVal="20"
            app:tickInterval="1"
            app:valueFormat="dp" />

        <com.drdisagree.iconify.ui.preferences.SliderPreference
            android:dependency="xposed_customqsmargin"
            android:key="xposed_qspanelTopMargin"
            android:title="@string/qs_panel_top_margin_title"
            app:defaultValue="100"
            app:iconSpaceReserved="false"
            app:maxVal="300"
            app:minVal="20"
            app:tickInterval="1"
            app:valueFormat="dp" />

    </com.drdisagree.iconify.ui.preferences.PreferenceCategory>

    <com.drdisagree.iconify.ui.preferences.PreferenceCategory
        android:key="xposedQuickSettingsQsMarginLandscape"
        android:title="@string/section_title_landscape"
        app:iconSpaceReserved="false"
        search:ignore="true">

        <com.drdisagree.iconify.ui.preferences.SliderPreference
            android:dependency="xposed_customqsmargin"
            android:key="xposed_qqspanelTopMarginLandscape"
            android:title="@string/qqs_panel_top_margin_title"
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            app:maxVal="300"
            app:minVal="0"
            app:tickInterval="1"
            app:valueFormat="dp" />

        <com.drdisagree.iconify.ui.preferences.SliderPreference
            android:dependency="xposed_customqsmargin"
            android:key="xposed_qspanelTopMarginLandscape"
            android:title="@string/qs_panel_top_margin_title"
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            app:maxVal="300"
            app:minVal="0"
            app:tickInterval="1"
            app:valueFormat="dp" />

    </com.drdisagree.iconify.ui.preferences.PreferenceCategory>

    <com.drdisagree.iconify.ui.preferences.FooterPreference
        android:key="qs_margin_footer"
        android:title="@string/qs_panel_top_margin_info"
        search:ignore="true" />

</PreferenceScreen>